- [Feature] Upload item in Finder context menu to upload selected file (Mac)
- [Feature] Upload item in Services menu of thirdparty programs main menu supporting files and folders (Mac)
- [Feature] Select bookmark to upload to when dragging files to application
- [Feature] Invalidation (Purge) of files in CDN (Cloudfiles/Akamai)
- [Feature] Skip option not available in transfer prompt [#1159]
- [Bugfix] Limit number of concurrent transfers (#5539, #5624)
- [Bugfix] Qeued transfers start in random order (#5632)
- [Bugfix] Dragging into topmost folder in browser (#1945)
- [Bugfix] ACLs getting dropped when updating metadata (S3) (#5571)
- [Bugfix] .CDN_ACCESS_LOGS folder listing is empty (Cloudfiles) (#5350)
- [Bugfix] Unicode normalization for filenames in upload (#5162)
- [Bugfix] Duplicate file breaks editing (#5524)
- [Bugfix] Large transfer history causes slowdown (#2889)
- [Bugfix] Files not shown (#5570) (Google Docs)
- [Bugfix] Images always converted to documents (#5601) (Google Docs)
- [Bugfix] Preserve symbolic links in transfers (#1860) (SFTP)

3.8.1 [http://trac.cyberduck.ch/milestone/3.8.1]
- [Bugfix] Fails to display custom language preference (#5500)
- [Bugfix] Clear data channels not supported (#5509) (FTP-TLS)
- [Bugfix] Some files not displayed (#5505) (FTP)
- [Bugfix] Wrong file size reported for uploads (#5503)

3.8 [http://trac.cyberduck.ch/milestone/3.8]
- [Feature] CDN configuration with custom origin server (Amazon CloudFront)
- [Feature] CDN invalidation requests (Amazon CloudFront) (#5197)
- [Feature] Connecting to Swift Storage (Openstack)
- [Feature] FireFTP Bookmarks Importer
- [Feature] CrossFTP Bookmarks Importer
- [Feature] Perform MD5 hash calculation during upload (#5186) (S3, Cloudfiles)
- [Feature] Rename existing files on upload or download (#5117)
- [Feature] Show last access timestamp in history (#3805)
- [Feature] Synchronize comparing MD5 checksum of file (S3, Cloudfiles, Dropbox, Azure)