@@ -31,8 +31,7 @@
 <body>
 
 <p class="windows">
-    <strong>Windows Support</strong> is <a href="http://cyberduck.ch/news/">coming</a> in 4.0. Public Beta now
-    available.
+    <strong>Now also </strong><a href="http://cyberduck.ch/news/">available</a> for Windows.
 </p>
 
 <p class="note">
@@ -57,12 +56,16 @@
     <li>[Feature] Upload item in Finder context menu to upload selected file (Mac)</li>
     <li>[Feature] Upload item in Services menu of thirdparty programs main menu supporting files and folders (Mac)</li>
     <li>[Feature] Select bookmark to upload to when dragging files to application</li>
+    <li>[Feature] User interface to create symbolic links (SFTP) [<a
+            href="http://trac.cyberduck.ch/ticket/1724">#1724</a>]
+    </li>
     <li>[Bugfix] Limit number of concurrent transfers (<a
             href="http://trac.cyberduck.ch/ticket/5539">#5539</a>)
     </li>
     <li>[Feature] Invalidation (Purge) of files in CDN (Cloudfiles/Akamai)</li>
     <li>[Feature] Skip option not available in transfer prompt [<a
-            href="http://trac.cyberduck.ch/ticket/1159">#1159</a>]</li>
+            href="http://trac.cyberduck.ch/ticket/1159">#1159</a>]
+    </li>
     <li>[Bugfix] Qeued transfers start in random order (#5632)</li>
     <li>[Bugfix] Dragging into topmost folder in browser (<a
             href="http://trac.cyberduck.ch/ticket/1945">#1945</a>)
@@ -89,6 +92,12 @@
     </li>
     <li>[Bugfix] Preserve symbolic links in uploads (<a
             href="http://trac.cyberduck.ch/ticket/1860">#1860</a>) (SFTP)
+    </li>
+    <li>[Bugfix] High CPU usage after transfer has completed (<a
+            href="http://trac.cyberduck.ch/ticket/5640">#5640</a>)
+    </li>
+    <li>[Bugfix] Multiple distributions created (CloudFront) (<a
+            href="http://trac.cyberduck.ch/ticket/5675">#5675</a>)
     </li>
 </ul>
 
